fixed overflow

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -26,3 +26,7 @@
     font-weight:lighter;
     font-size: 4.6em;
 }
+.info-box {
+    overflow: visible;
+}
+
